// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogActions ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-19eh1d1-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-dqssxn-MuiButtonBase-root-MuiButton-root"
      color="primary"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-ua4o5v-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-vre4t7-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-ua4o5v-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-1kamn6n-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-ua4o5v-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-6igxcm-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;

exports[`DialogActions ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiDialogActions-root MuiDialogActions-spacing css-a9aj5r-MuiDialogActions-root"
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-h9qa37-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Close
    </button>
  </div>
</div>
`;
